pakage name changed

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue-spinners",
+  "name": "v-spinners",
   "version": "0.0.1",
   "description": "Spinners of Vue Components",
   "keywords": [
